--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MvcMovie.Models.MovieGenreViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Your Movies";
 }
 
-<h1>Index</h1>
+<h1>Your Movies</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
